# email-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  architect.md  vite.config.js
Admin-Web/: README.md  index.html  package-lock.json  package.json  vite.config.js
App/: .env.local.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
app/: __init__.py  config.py  main.py  schemas.py  worker.py
docs/: API-명세.md  Chroma-저장구조-ERD.md  README.md  ai-server-changes.md  automation-backend-gap.md  backend-server-changes.md  calendar-backend-gap.md  frontend-backend-integration-gap.md  inbox-backend-gap.md  onboarding-backend-gap.md  ownership.md  progress-log.md  sample-manual.txt
frontend/: .gitignore  architect.md
rag/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  summary.md
rag/app/: config.py  main.py  worker.py
rag/app/mq/: schemas.py
rag/app/services/: canonicalization.py  chunking.py  claude_service.py  document_chunking.py  document_parser.py  draft_service.py  index_store.py  openai_compatible_client.py
rag/docker/: start-rag-combined.sh
rag/docs/: Chroma-저장구조-ERD.md  README.md  RabbitMQ-명세.md  current-status.md  progress-log.md  retrieval-query-design.md  로컬-UI-연동-및-배포-체크리스트.md  연동-개요.md
rag/scripts/: reset_local_rabbitmq_topology.py
rag/tests/: test_canonicalization.py  test_document_parser.py  test_draft_service.py  test_index_store.py  test_main.py  test_openai_compatible_services.py
scripts/: check_chroma.py
tests/: conftest.py  test_chunking.py  (+3 more)
(+319 files in other folders)
